--- a/app/src/main/res/layout/activity_detail_pizza.xml
+++ b/app/src/main/res/layout/activity_detail_pizza.xml
@@ -107,116 +107,26 @@
             android:text="Toppings"
             android:textColor="#FF0F0E0D"
             android:textSize="18sp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <!-- Topping background items -->
-        <ImageView
-            android:id="@+id/bg1"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/image_rectangle5"
+        <!-- RecyclerView Toppings -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_toppings"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
             app:layout_constraintTop_toBottomOf="@id/text_toppings"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="20dp" />
-
-        <ImageView
-            android:id="@+id/bg2"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/image_rectangle5"
-            app:layout_constraintTop_toTopOf="@id/bg1"
-            app:layout_constraintStart_toEndOf="@id/bg1"
-            android:layout_marginStart="14dp" />
-
-        <ImageView
-            android:id="@+id/bg3"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/image_rectangle5"
-            app:layout_constraintTop_toTopOf="@id/bg1"
-            app:layout_constraintStart_toEndOf="@id/bg2"
-            android:layout_marginStart="14dp" />
-
-        <ImageView
-            android:id="@+id/bg4"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/image_rectangle5"
-            app:layout_constraintTop_toTopOf="@id/bg1"
-            app:layout_constraintStart_toEndOf="@id/bg3"
-            android:layout_marginStart="14dp" />
-
-        <ImageView
-            android:id="@+id/bg5"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:background="@drawable/image_rectangle5"
-            app:layout_constraintTop_toTopOf="@id/bg1"
-            app:layout_constraintStart_toEndOf="@id/bg4"
-            android:layout_marginStart="14dp" />
-
-        <!-- Topping icons -->
-        <ImageView
-            android:id="@+id/image_mushroom"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:background="@drawable/image_mushroom"
-            app:layout_constraintTop_toTopOf="@id/bg1"
-            app:layout_constraintBottom_toBottomOf="@id/bg1"
-            app:layout_constraintStart_toStartOf="@id/bg1"
-            app:layout_constraintEnd_toEndOf="@id/bg1"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/image_onion"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-
-            app:layout_constraintTop_toTopOf="@id/bg2"
-            app:layout_constraintBottom_toBottomOf="@id/bg2"
-            app:layout_constraintStart_toStartOf="@id/bg2"
-            app:layout_constraintEnd_toEndOf="@id/bg2"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/image_pepperoni"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-
-            app:layout_constraintTop_toTopOf="@id/bg3"
-            app:layout_constraintBottom_toBottomOf="@id/bg3"
-            app:layout_constraintStart_toStartOf="@id/bg3"
-            app:layout_constraintEnd_toEndOf="@id/bg3"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/image_spinach"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-
-            app:layout_constraintTop_toTopOf="@id/bg4"
-            app:layout_constraintBottom_toBottomOf="@id/bg4"
-            app:layout_constraintStart_toStartOf="@id/bg4"
-            app:layout_constraintEnd_toEndOf="@id/bg4"
-            android:scaleType="centerInside" />
-
-        <ImageView
-            android:id="@+id/image_pineapple"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-
-            app:layout_constraintTop_toTopOf="@id/bg5"
-            app:layout_constraintBottom_toBottomOf="@id/bg5"
-            app:layout_constraintStart_toStartOf="@id/bg5"
-            app:layout_constraintEnd_toEndOf="@id/bg5"
-            android:scaleType="centerInside" />
-
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:listitem="@layout/item_topping"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
     <TextView
                 android:id="@+id/text_description"
