--- a/app/src/main/res/layout/activity_detail_pizza.xml
+++ b/app/src/main/res/layout/activity_detail_pizza.xml
@@ -33,7 +33,7 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
                 <Button
-                    android:id="@+id/text_add_to_orders"
+                    android:id="@+id/text_add_to_cart"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginBottom="50dp"
@@ -67,8 +67,8 @@
 
     <ImageView
         android:id="@+id/image_pizza"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:scaleType="centerInside"
 
         app:layout_constraintTop_toTopOf="@id/image_rectangle"
