--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,8 +10,10 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="5dp"
         app:layout_constraintTop_toTopOf="@+id/text_home"
+        android:layout_marginTop="60dp"
         android:id="@+id/hello_frame">
 
         <!-- TextView bên trái -->
@@ -19,7 +21,7 @@
             android:id="@+id/tv_welcome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Chào mừng quay lại , MinHee"
+            android:text="Chào mừng quay lại ,"
             android:textSize="18sp"
             android:layout_gravity="start|center_vertical"/>
 
@@ -55,7 +57,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         android:paddingHorizontal="16dp"
         app:layout_constraintTop_toBottomOf="@id/search_view"
         app:layout_constraintStart_toStartOf="parent"
