--- a/app/src/main/res/drawable/ic_cancel_item.xml
+++ b/app/src/main/res/drawable/ic_cancel_item.xml
@@ -1,12 +1,12 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="11dp"
-    android:height="2dp"
-    android:viewportWidth="11"
-    android:viewportHeight="2">
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
   <path
-      android:pathData="M3,1H8"
-      android:strokeWidth="1.81818"
-      android:fillColor="#00000000"
-      android:strokeColor="#ffffff"
-      android:strokeLineCap="round"/>
+      android:pathData="M6,12H18"
+      android:strokeWidth="5"
+      android:strokeColor="#FFFFFF"
+      android:fillColor="@android:color/transparent"
+      android:strokeLineCap="round" />
 </vector>
