--- a/app/src/main/res/layout/fragment_orders.xml
+++ b/app/src/main/res/layout/fragment_orders.xml
@@ -8,45 +8,14 @@
     tools:context=".ui.map.MapFragment"
     android:id="@+id/text_orders">
 
-    <!-- 1. Welcome + Avatar -->
-    <FrameLayout
-        android:id="@+id/hello_frame"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15sp"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tv_welcome"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chào mừng quay lại , MinHee"
-            android:textSize="18sp"
-            android:layout_gravity="start|center_vertical"/>
-
-        <ImageView
-            android:id="@+id/img_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="end|center_vertical"
-            android:layout_marginStart="8dp"
-            android:background="@drawable/rounded_avatar_bg"
-            android:scaleType="centerCrop"/>
-    </FrameLayout>
-
-    <!-- 2. Search -->
-    <SearchView
-        android:id="@+id/search_view"
+    <!-- View tạo khoảng trống trên đầu -->
+    <View
+        android:id="@+id/space_top"
         android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="16dp"
-        android:queryHint="Search"
-        android:iconifiedByDefault="false"
-        android:background="@drawable/image_rectangle2"
-        app:layout_constraintTop_toBottomOf="@id/hello_frame"
+        android:layout_height="45dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 3. Khung ưu đãi -->
     <ImageView
@@ -56,9 +25,8 @@
         android:layout_margin="16dp"
         android:scaleType="centerCrop"
         android:src="@drawable/image_quang_cao"
-
         android:background="@drawable/image_rectangle3"
-        app:layout_constraintTop_toBottomOf="@id/search_view"
+        app:layout_constraintTop_toBottomOf="@id/space_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -75,6 +43,7 @@
         app:tabIndicatorColor="@color/orange"
         app:tabSelectedTextColor="@color/black"
         app:tabTextColor="@color/black" />
+
     <!-- 5. ViewPager2 cho nội dung các tab -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
