--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -29,24 +29,19 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/txt_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Pepperoni"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/txt_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Pepperoni"
+                    android:textStyle="bold"
+                    android:textSize="16sp"
+                    android:layout_weight="1"/>
+                <!-- Number Picker -->
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/txt_detail"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Topping: Nấm\nSize: L - Đế: Vừa"
-                android:textSize="12sp"
-                android:textColor="#666666"/>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
